Update W142 Jupyter Notebook Assignment-Spring2021.ipynb

--- a/W142 Jupyter Notebook Assignment-Spring2021.ipynb
+++ b/W142 Jupyter Notebook Assignment-Spring2021.ipynb
@@ -24,7 +24,7 @@
     "\n",
     "\n",
     "To complete this assignment, if you are working individually, you will need to select:\n",
-    "1. A country of your interest that is in the WIDE dataset\n",
+    "1. A country of your interest that is in the WIDE dataset. Please note that we discourage selecting high income countries as either they do not report data to WIDE or the indicators may not be relevant for their context\n",
     "2. ONE set of unique indicators (AKA outcome variable) \n",
     "    Depending on the availability of data in your country of choice, examples of indicators sets include: \n",
     "       (Set 1) Out of School Children Rate at primary, lower secondary and upper secondary level:\n",
